--- a/auth.html
+++ b/auth.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>MelodyTunes — Login & Signup</title>
+  <title>MusicsAura — Login & Signup</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -165,7 +165,7 @@
       <div class="card">
         <div class="logo">
           <div class="logo-icon">🎵</div>
-          <h1>MelodyTunes</h1>
+          <h1>MusicsAura</h1>
           <p class="subtitle">Your music, your vibe</p>
         </div>
 
@@ -243,10 +243,10 @@
     </div>
 
     <div class="welcome">
-      <h2>Welcome to MelodyTunes</h2>
+      <h2>Welcome to MusicsAura</h2>
       <p>
         Discover millions of songs, create personalized playlists, and enjoy high-quality streaming. 
-        <strong>MelodyTunes</strong> brings you seamless playback across all devices. 
+        <strong>MusicsAura</strong> brings you seamless playback across all devices. 
         Join the music revolution today!
       </p>
     </div>
