--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="MelodyTunes" />
+  <meta name="apple-mobile-web-app-title" content="MusicsAura" />
   
-  <title>MelodyTunes - Indian Music Player</title>
+  <title>MusicsAura - Indian Music Player</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%234a90e2'/%3E%3Ctext x='50' y='70' font-size='60' fill='white' text-anchor='middle' font-family='Arial'%3Eâ™ª%3C/text%3E%3C/svg%3E">
+  <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="styles/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -44,8 +44,8 @@
     <!-- TOP BAR -->
     <header class="top-bar">
       <div class="logo-area">
-        <img src="assets/logo.png" alt="MelodyTunes" class="app-logo" />
-        <span class="app-title">MelodyTunes</span>
+        <img src="assets/logo.png" alt="MusicsAura" class="app-logo" />
+        <span class="app-title">MusicsAura</span>
       </div>
 
       <button id="profile-btn" aria-label="Profile">
