--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Melody Tunes Admin</title>
+  <title>MusicsAura Admin</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <style>
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>MelodyTunes Admin Dashboard</h1>
+    <h1>MusicsAura Admin Dashboard</h1>
     <a href="index.html" class="home-btn">
   <span class="material-icons">home</span>
   Home
