Keep playback alive: open dashboards in new tab and save state before navigating

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -60,7 +60,7 @@
       </div>
       <h1 style="margin:0; flex:1; text-align:center;">MusicsAura Admin Dashboard</h1>
       <div style="display:flex; gap:0.5rem;">
-        <a href="user-dashboard.html" class="user-btn">
+        <a href="user-dashboard.html" class="user-btn" target="_blank" rel="noopener">
           <span class="material-icons">person</span>
           My Stats
         </a>
